# z2doc

./: .gitignore  Cargo.toml  GEMINI.md  README.md  Trunk.toml  index.html  sample_theme.json  theme.json  zelda2.json
.github/workflows/: deploy.yml
cdl and info files/: nes_registers.info  zelda_ii.cdl  zelda_ii_bank00.info  zelda_ii_bank00_rom.cdl  zelda_ii_bank01_rom.cdl  zelda_ii_bank02_rom.cdl  zelda_ii_bank03_rom.cdl  zelda_ii_bank04.info  zelda_ii_bank04_rom.cdl  zelda_ii_bank05_rom.cdl  zelda_ii_bank06_rom.cdl  zelda_ii_bank07.info  zelda_ii_bank07_rom.cdl  zelda_ii_cartridge_ram.info  zelda_ii_common.info
disassembler/: Cargo.toml  check.sh  zelda2.cfg  zelda2.yaml
disassembler/resources/: bank0.yaml  bank1.yaml  bank2.yaml  bank3.yaml  bank4.yaml  bank5.yaml  bank6.yaml  bank7.yaml  sym0.txt  sym1.txt  sym2.txt  sym3.txt  sym4.txt  sym5.txt  sym6.txt  sym7.txt
disassembler/src/: main.rs
disassembler/src/description/: comment.rs  mod.rs  nesfile.rs  range.rs
disassembler/src/dis/: code.rs  cpu6502.rs  data.rs  mod.rs  rom.rs  symtab.rs
disassembler/src/output/: mod.rs
doc/: description.md  implementation_details.md
game doc/: Zelda2_P1_ObjectCodes.txt  Zelda2_WH_ObjectCodes.txt
junk/: README.md  cleanup_symbols.py  extract_metadata.py
lua/: hitbox.lua
src/: app.rs  database.rs  main.rs  models.rs
src/disasm/: mod.rs
static/: app.js  index.html  style.css
templates/: default_db.json  default_db.json5
utils/cdl_to_info/: cdl_to_info.c
utils/disasm batch scripts/: disasm_bank00.bat  disasm_bank04.bat  disasm_bank07.bat
