[package]
name = "docusemmbler"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "macros"] }
clap = { version = "4.0", features = ["derive"] }
