[package]
name = "docassembler"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "FileSystemHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "Window",
    "Document",
    "HtmlDocument",
    "Element",
    "HtmlElement",
    "Node",
    "Selection",
    "Range",
    "Storage",
    "Url",
    "Location",
    "History",
    "DataTransfer",
    "DragEvent",
    "MouseEvent",
    "KeyboardEvent",
    "FocusEvent",
    "Response",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Blob",
    "File"
] }
js-sys = "0.3"
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
regex = "1.10"
lucide-leptos = "0.1" # Optional, for icons if we want them later

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
