[package]
name = "disassembler"
version = "0.1.0"
authors = ["Chris Frantz <frantzcj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3.25"
log = "0.4"
env_logger = "0.8.3"
anyhow = "1.0"
thiserror = "1.0"
num-traits = "0.2.14"
itertools = "0.10"
